# pulserank_platform

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: policy_config.json
docs/: PULSERANK_ATTRIBUTION_AB.md  PULSERANK_BIAS_CORRECTION.md  PULSERANK_BUILD_GROUPS.md  PULSERANK_CANDIDATE_GENERATION.md  PULSERANK_CORPUS.md  PULSERANK_DASHBOARD.md  PULSERANK_FAILURE_DEMO.md  PULSERANK_RANKING_BASELINE.md  PULSERANK_RERANKING_CONSTRAINTS.md  PULSERANK_SCOPE.md  index.html
outputs/dashboard/: dashboard_manifest.json
outputs/evidence/: ab_simulation_results.json  bias_correction_report.json  candidate_generation_report.json  candidate_recall_report.json  candidate_samples.json  catalog_coverage_report.json  conversion_attribution_report.json  corpus_samples.json  corpus_summary.json  diversity_guardrail_log.json  diversity_report.json  failure_recovery_report.json  metasignal_integration_events.json  model_registry.json  offline_eval_log.json  propensity_by_rank_report.json  schema_manifest.json  (+1 more)
scripts/: build_dashboard_v1.py  run_attribution_ab_v1.py  run_bias_correction_v1.py  run_candidate_generation_v1.py  run_ranking_baseline_v1.py  run_reranking_constraints_v1.py  seed_demo.py  show_demo_report.py  validate_attribution_ab_v1.py  validate_bias_correction_v1.py  validate_candidate_generation_v1.py  validate_corpus_v1.py  validate_dashboard_v1.py  validate_demo_report_v1.py  validate_ranking_baseline_v1.py  validate_reranking_constraints_v1.py  validate_scaffold_v1.py
tests/: test_artifacts.py  test_ranking_math.py
(+24 files in other folders)
