[project]
name = "pulserank-platform"
version = "0.1.0"
description = "Production-simulated marketplace recommendation and ranking decision system"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.4.0",
  "scipy>=1.12.0",
  "pyarrow>=15.0.0",
  "pydantic>=2.6.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
